# led-strip-audiovisualiser

./: CMakeLists.txt  README.md  main.c
cava/: cavacore.h
